--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@tanstack/react-query": "^5.62.3",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
     "install": "^0.13.0",
